--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- LINK CSS -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -46,5 +47,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- LINK SCRIPT -->
+    <script src="../src/Assets/Js/Code.js"></script>
   </body>
 </html>
